# Meta-Elf

./: .gitignore  README.md  generate_icon.mjs  index.html  meta-elf.md  package-lock.json  package.json  pixel-variants.html  update_html.cjs  vite.config.ts
.github/: copilot-instructions.md
docs/: NEWS_DATA_SOURCES.md  UI_CONSISTENCY.md  UI_OPTIMIZATION_CHECKLIST.md
scripts/: apply-icon-rounded.mjs  create-icons.mjs  gen-icons.cjs  tauri-dev.ps1
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  quotes.rs
src/components/: BrandElfMascot.vue  MarketMovesPanel.vue  MarketRibbon.vue  OrderBookPanel.vue  StockChartPane.vue  StockDetailBody.vue  YjSelect.vue
src/composables/: useEdgeHide.ts  useQuotes.ts  useSettings.ts  useStockDetailMarket.ts
src/constants/: chartIndicatorPreset.ts  quote.ts  watchGroup.ts
src/router/: index.ts
src/types/: app.ts  marketDetail.ts  marketMoves.ts  marketRibbon.ts
src/utils/: brandKaomoji.ts  chartIndicators.ts  chartTime.ts  format.ts  intradayChartItems.ts  intradayPivots.ts  orderBookEligibility.ts  quoteDisplayOrder.ts  stockDisplay.ts  watchGroups.ts
src/views/: BrandElfPreviewView.vue  MainPanel.vue  MarketMovesView.vue  SettingsView.vue  StockDetailView.vue  WatchlistAddView.vue  WatchlistManageView.vue
