[package]
name = "yuanjingling"
version = "0.1.0"
description = "元精灵 — 桌面悬浮看盘"
authors = ["yuanjingling"]
edition = "2021"

[lib]
name = "yuanjingling_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rand = "0.8"
