[package]
name = "yuanjingling"
version = "0.1.0"
description = "元精灵 — 桌面悬浮看盘"
authors = ["yuanjingling"]
edition = "2021"

[lib]
name = "yuanjingling_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
futures = "0.3"
urlencoding = "2.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "alloc"] }
encoding_rs = "0.8"
